Genericize the Lanterna features so they could theoretically run on any terminal
This may not actually work, though; it doesn't for me in gnome terminal.