@@ -6,4 +6,6 @@ CLASSPATH=out/production/TaflEngine:lib/*
 
 java -server -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:+TieredCompilation -Xms2048m -Xmx4096m -cp $CLASSPATH com/manywords/softworks/tafl/OpenTafl --debug $*
 
+#jdb -server -XX:+UseCompressedOops -XX:+UseConcMarkSweepGC -XX:+TieredCompilation -Xms2048m -Xmx4096m -sourcepath src -classpath $CLASSPATH com/manywords/softworks/tafl/OpenTafl --debug $*
+
 #java -server -XX:+UseCompressedOops -XX:+TieredCompilation -XX:+UseConcMarkSweepGC -Xms2048m -Xmx4096m -cp $CLASSPATH com/manywords/softworks/tafl/OpenTafl --window $*
